REGISTRY-3745 - fix for - Align 'Select a lifecycle' button .

--- a/apps/publisher/themes/default/css/lifecycle-styles.css
+++ b/apps/publisher/themes/default/css/lifecycle-styles.css
@@ -32,7 +32,7 @@ text {
 }
 
 #lifecycle-selector {
-    width: 400px;
+    width: 375px;
 }
 
 #lifecycle-rendering-area {
